# dynamic-ICP

./: .gitignore  LICENSE  README.md
KITTI_data_parser/: car_26893_filtered.txt  ply_parser.ipynb  point_cloud_visualize.ipynb  tansform_to_local.ipynb  value_counts.txt
KITTI_data_parser/car_point_cloud/: car.ply  car_26892.ply  car_26893.ply  car_26893_filtered.ply  car_26893_timestamp.ply  car_local.ply  visible_car.ply
matlab/: curve_surface.m  curve_surface_transform.m  sampled_data.txt  surface_fitting.m  transform_function.m  transformed_data.txt
matlab/surface_fitting/: curve_fitting.m  main.m  surface_fitting.m  transformed_data.txt  transformed_z.m
point_to_curve_surface/: point_to_curve_surface_ICP.cpp
point_to_point_icp/: CMakeLists.txt  PointsReader.h  g2o_ICP.cpp  g2o_ICP.h  icp.h  icp_main.cpp  knn.h  point_to_point_main.cpp  read_points.cpp  test_main.cpp  test_read_points.cpp
point_to_point_icp/car_data/: car_26893_filtered_test.txt  car_26893_filtered_test_less.txt  car_26893_filtered_test_less_same.txt
point_to_point_icp/cmake_modules/: FindG2O.cmake
point_to_point_icp/demo/: test_main
